# openMM-Doc-MCP

./: .gitignore  README.md  README_en.md  README_ja.md  apispec_ja.md  create_faiss_index.py  pyproject.toml  requirements.txt  search_molecular_simulation.py  server.py
data/indices/docs/: index.faiss  index.pkl
specs/: apispec_en.md
src/vector_db/: __init__.py  indexer.py  retriever.py
src/vector_db/tests/: conftest.py  test_indexer.py  test_retriever.py
tests/: test_server.py
