[project]
name = "openmm-doc-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.7.4",
    "huggingface-hub>=0.19.4",
    "langchain>=0.0.335",
    "langchain-community>=0.0.14",
    "langchain-core>=0.1.13",
    "mcp>=1.2.0",
    "pytest>=8.3.5",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
